feat: implmented pdf embeddings
